# cashier-app

./: CMakeLists.txt  storecashierprogram.sln
Debug/: storecashierprogram.ilk  userdata.txt
storecashierprogram/: Brand.cpp  Brand.h  cashregister.cpp  cashregister.h  coupon.cpp  coupon.h  coupondata.txt  itemdata.txt  main.cpp  manager.cpp  manager.h  mangerdata.txt  resource.h  storecashierprogram.aps  storecashierprogram.cpp  storecashierprogram.vcxproj  storecashierprogram.vcxproj.filters  storeitem.cpp  storeitem.h  userdata.txt
storecashierprogram/Debug/: cashregister.new.obj.enc  storecashierprogram.exe.recipe  vc142.idb
storecashierprogram/Debug/storecas.3B2BDAB4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  storecashierprogram.lastbuildstate
